# fast-prototyping-of-genai-apps-with-streamlit

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
